--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Join the Rizzos Riches Affiliate Revolution!</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Montserrat', Arial, sans-serif;
+            background: linear-gradient(135deg, #002868 0%, #ffffff 50%, #bf0a30 100%);
+            color: #002868;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .container {
+            background: rgba(255,255,255,0.95);
+            border-radius: 16px;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.18);
+            padding: 2.5rem 2rem 2rem 2rem;
+            max-width: 440px;
+            width: 100%;
+            margin: 2rem auto;
+            text-align: center;
+            border: 3px solid #bf0a30;
+        }
+        h1 {
+            font-size: 2.2rem;
+            margin-bottom: 1rem;
+            font-weight: 700;
+            letter-spacing: 1px;
+            color: #bf0a30;
+            text-shadow: 1px 1px 0 #fff, 2px 2px 0 #002868;
+        }
+        .subtitle {
+            font-size: 1.1rem;
+            margin-bottom: 1.5rem;
+            color: #002868;
+            font-weight: 500;
+        }
+        ul {
+            text-align: left;
+            margin: 1.5rem 0 2rem 0;
+            padding-left: 1.2rem;
+        }
+        li {
+            margin-bottom: 0.7rem;
+            font-size: 1rem;
+            color: #002868;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+        input[type="text"], input[type="email"] {
+            padding: 0.8rem;
+            border-radius: 8px;
+            border: 2px solid #002868;
+            font-size: 1rem;
+            margin-bottom: 0.5rem;
+        }
+        button {
+            background: #bf0a30;
+            color: #fff;
+            font-weight: 700;
+            border: none;
+            border-radius: 8px;
+            padding: 1rem;
+            font-size: 1.1rem;
+            cursor: pointer;
+            transition: background 0.2s;
+            box-shadow: 0 2px 8px rgba(191,10,48,0.12);
+        }
+        button:hover {
+            background: #002868;
+            color: #fff;
+        }
+        .disclaimer {
+            font-size: 0.85rem;
+            color: #555;
+            margin-top: 1.5rem;
+        }
+    </style>
+</head>
+<body>
+    <!-- Main content removed as requested -->
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RizzosAI Affiliate Program | Earn with Us</title>
+    <meta name="description" content="Join the RizzosAI affiliate program. Earn commissions by sharing the future of AI-powered domains and digital services.">
+    <style>
+        body { font-family: Arial, sans-serif; background: #f7f7f7; margin: 0; }
+        .container { max-width: 600px; margin: 60px auto; background: #fff; padding: 36px 28px; border-radius: 10px; box-shadow: 0 2px 16px #ccc; }
+        h1 { color: #2d3e50; text-align: center; }
+        h2 { color: #0074d9; text-align: center; }
+        p { color: #444; text-align: center; }
+        ul { color: #444; margin: 20px 0 30px 30px; }
+        .cta { text-align: center; margin: 30px 0; }
+        .cta button { background: #0074d9; color: #fff; border: none; padding: 14px 32px; border-radius: 5px; font-size: 1.1rem; cursor: pointer; transition: background 0.2s; }
+        .cta button:hover { background: #005fa3; }
+        .note { font-size: 0.95em; color: #888; margin-top: 18px; text-align: center; }
+        .footer { margin-top: 32px; text-align: center; font-size: 0.9em; color: #aaa; }
+        form { margin-top: 24px; display: flex; flex-direction: column; gap: 12px; align-items: center; }
+        input[type="text"], input[type="email"] { padding: 10px; border: 1px solid #bbb; border-radius: 5px; font-size: 1rem; width: 80%; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>RizzosAI Affiliate Program</h1>
+        <h2>Earn with the Future of AI Domains</h2>
+        <p>Share RizzosAI with your network and earn generous commissions for every successful referral. Our program is simple, transparent, and designed to help you grow your income while helping others secure premium AI-powered domains and digital services.</p>
+        <ul>
+            <li><strong>High Commissions:</strong> Get paid for every sale you refer.</li>
+            <li><strong>Easy Signup:</strong> No technical skills required—just share your unique link.</li>
+            <li><strong>Real-Time Tracking:</strong> Monitor your referrals and earnings in your dashboard.</li>
+            <li><strong>Fast Payouts:</strong> Receive your commissions quickly and securely.</li>
+        </ul>
+        <div class="cta">
+            <form method="post" action="/affiliate-signup">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <button type="submit">Join the Affiliate Program</button>
+            </form>
+        </div>
+        <div class="note">
+            Questions? <a href="mailto:support@rizzosai.com">Contact our team</a>.<br>
+            <strong>Your privacy is protected. No spam, ever.</strong>
+        </div>
+    </div>
+    <div class="footer">
+        &copy; 2025 RizzosAI. All rights reserved.
+    </div>
+</body>
+</html>
+  
+
