--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                     <li>Lifetime earnings go into your account every day</li>
                     <li>Fast daily payments</li>
                 </ul>
-                <a class="buy-button green" href="https://buy.stripe.com/7sY8wP10P8ZGcAN5fT1ZS0r" target="_blank"
-                    rel="noopener">Buy Starter</a>
+             a class="buy-button pro" href="https://buy.stripe.com/7sY8wP10P8ZGcAN5fT1ZS0r" target="_blank"
+                    rel="noopener">Buy Starter</a
             </div>
             <!-- PRO PACKAGE -->
             <div class="package-box">
